--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+	background-color: #001d3d;
+    color: #000;
 	font-family: "Lato", sans-serif;
 	font-size: 20px;
 }
@@ -7,7 +9,6 @@ body {
 	max-height: 100%;
 	margin: 30px auto;
 	padding: 15px;
-	background-color: #dddddd;
 	border-radius: 5px;
 }
 #title {
