--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-	background-color: #001d3d;
+	background-color: rgb(153, 152, 141);
     color: #000;
 	font-family: "Lato", sans-serif;
 	font-size: 20px;
 }
 #main {
+	background-color: rgb(190, 187, 151);
 	max-width: 1280px;
 	max-height: 100%;
 	margin: 30px auto;
@@ -81,4 +82,5 @@ ol {
     margin: 0 auto 50px auto;
     text-align: left;
     line-height: 1.6;
+    list-style-type: upper-roman;
 }
